package org.example;

public interface Talkable {
    String talk();
}
